--- a/Feliz Aniversario.html
+++ b/Feliz Aniversario.html
@@ -3,80 +3,90 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Feliz Aniversário Vovó - Eu Te Amo!</title>
+  <title>Feliz Aniversário Vovó!</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      background: url('WhatsApp Image 2025-06-15 at 21.42.27.jpeg') no-repeat center center;
+      background: url('WhatsApp%20Image%202025-06-15%20at%2021.42.27.jpeg') no-repeat center center fixed;
       background-size: cover;
+      font-family: 'Dancing Script', cursive;
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       height: 100vh;
-      font-family: 'Dancing Script', cursive;
-      color: #fff;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
+      color: white;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
     }
 
     h1 {
-      font-size: 48px;
+      font-size: 40px;
+      text-align: center;
       margin: 20px;
-      text-align: center;
     }
 
-    h2 {
-      font-size: 32px;
-      margin-bottom: 40px;
+    p {
+      font-size: 24px;
       text-align: center;
+      margin: 10px 20px;
     }
 
-    .buttons {
+    .botoes {
       display: flex;
-      gap: 12px;
+      gap: 10px;
       flex-wrap: wrap;
+      justify-content: center;
+      margin-top: 20px;
     }
 
     button {
       padding: 10px 20px;
       border: none;
-      border-radius: 12px;
-      background-color: rgba(0, 123, 255, 0.8);
+      border-radius: 20px;
+      background-color: rgba(0, 0, 0, 0.6);
       color: white;
-      font-size: 18px;
       cursor: pointer;
-      box-shadow: 2px 2px 6px rgba(0,0,0,0.3);
-      transition: background 0.3s;
+      font-size: 18px;
+      transition: background-color 0.3s;
     }
 
     button:hover {
-      background-color: rgba(0, 90, 190, 0.9);
-    }
-
-    button:disabled {
-      background-color: gray;
-      cursor: not-allowed;
+      background-color: rgba(255, 255, 255, 0.2);
     }
 
     #faixa-atual {
-      margin-top: 15px;
+      margin-top: 10px;
       font-weight: bold;
-      background-color: rgba(0,0,0,0.5);
-      padding: 6px 12px;
+      color: #fff;
+      background: rgba(0,0,0,0.4);
+      padding: 6px 14px;
       border-radius: 10px;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 28px;
+      }
+      p {
+        font-size: 20px;
+      }
+      button {
+        font-size: 16px;
+        padding: 8px 16px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <h1>Feliz Aniversário Vovó 🎉</h1>
-  <h2>Eu te amo ❤️</h2>
+  <h1>🎉 Feliz Aniversário Vovó! Eu te amo ❤️</h1>
+  <p>Que seu dia seja cheio de amor, alegria e muitos sorrisos! 💖</p>
 
-  <div class="buttons">
-    <button id="faixa1">Tocar Faixa 1 🎶</button>
-    <button id="faixa2">Tocar Faixa 2 🎶</button>
-    <button id="pausar" style="display:none;">Pausar ⏸️</button>
+  <div class="botoes">
+    <button id="faixa1">▶️ Tocar Áudio 1</button>
+    <button id="faixa2">▶️ Tocar Áudio 2</button>
+    <button id="pausar" style="display:none;">⏸️ Pausar</button>
   </div>
 
   <div id="faixa-atual"></div>
@@ -88,9 +98,10 @@
     const btnFaixa1 = document.getElementById('faixa1');
     const btnFaixa2 = document.getElementById('faixa2');
     const btnPausar = document.getElementById('pausar');
+    const faixaAtual = document.getElementById('faixa-atual');
+
     const audio1 = document.getElementById('audio-faixa1');
     const audio2 = document.getElementById('audio-faixa2');
-    const faixaAtual = document.getElementById('faixa-atual');
 
     let audioTocando = null;
 
@@ -101,12 +112,12 @@
       }
       audio.play();
       audioTocando = audio;
-      faixaAtual.textContent = `Tocando: ${nome}`;
+      faixaAtual.textContent = `🎶 Tocando: ${nome}`;
       btnPausar.style.display = 'inline-block';
     }
 
-    btnFaixa1.addEventListener('click', () => tocarFaixa(audio1, 'Faixa 1'));
-    btnFaixa2.addEventListener('click', () => tocarFaixa(audio2, 'Faixa 2'));
+    btnFaixa1.addEventListener('click', () => tocarFaixa(audio1, 'Áudio 1'));
+    btnFaixa2.addEventListener('click', () => tocarFaixa(audio2, 'Áudio 2'));
 
     btnPausar.addEventListener('click', () => {
       if (audioTocando) {
